--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "agentic-contextualizer"
 version = "0.1.0"
 description = "Generate effective context files for codebases that AI coding agents can use"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "langchain>=0.1.0",
     "langchain-anthropic>=0.1.0",
@@ -11,6 +11,7 @@ dependencies = [
     "pyyaml>=6.0",
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
+    "pathspec>=0.12.1",
 ]
 
 [project.optional-dependencies]
@@ -34,8 +35,8 @@ python_functions = "test_*"
 
 [tool.black]
 line-length = 100
-target-version = ['py310']
+target-version = ['py311']
 
 [tool.ruff]
 line-length = 100
-target-version = "py310"
+target-version = "py311"
