--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
     "pathspec>=0.12.1",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
