--- a/.gitignore
+++ b/.gitignore
@@ -21,23 +21,25 @@ wheels/
 *.egg
 
 # Virtual environments
+.venv/
 venv/
 ENV/
 env/
-.venv
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS
-.DS_Store
-Thumbs.db
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Environment
+.env
+
+# Generated contexts (keep the directory)
+contexts/*
+!contexts/.gitkeep
