docs: update .env.example with multi-provider config

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
 # LLM Provider Configuration
+# Options: "anthropic" (default) or "litellm"
 LLM_PROVIDER=anthropic
 MODEL_NAME=claude-3-5-sonnet-20241022
-ANTHROPIC_API_KEY=your_api_key_here
 
-# Optional: OpenRouter fallback
-# OPENROUTER_API_KEY=your_key_here
+# Provider-specific API keys
+ANTHROPIC_API_KEY=your_api_key_here
+# OPENAI_API_KEY=sk-...
+# GOOGLE_API_KEY=...
+
+# Optional: Custom API endpoint (for proxies or alternative providers)
+# ANTHROPIC_BASE_URL=https://api.anthropic.com
+
+# LLM Settings
+LLM_MAX_RETRIES=3
+LLM_TIMEOUT=60
 
 # Scanner Settings
 # Maximum file size in bytes (default: 1MB)
