--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "pathspec>=0.12.1",
     "rich>=13.0.0",
     "litellm>=1.0.0",
+    "langchain-openai>=1.1.8",
+    "langchain-community>=0.4.1",
+    "langchain-litellm>=0.5.1",
 ]
 
 [project.optional-dependencies]
