--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,35 @@ ANTHROPIC_API_KEY=your_api_key_here
 LLM_MAX_RETRIES=3
 LLM_TIMEOUT=60
 
+# Rate Limiting (agent mode)
+# Controls how fast the agent makes LLM calls — tune these for your gateway's limits.
+# RATE_LIMIT_RPS: Requests per second (default: 0.3 = ~1 call every 3s)
+#   - Lower if hitting token-per-minute limits (e.g., 0.1 = 1 call every 10s)
+#   - Higher for generous limits (e.g., 1.0 = 1 call per second)
+# RATE_LIMIT_BURST: Max burst of back-to-back calls before throttling (default: 3)
+RATE_LIMIT_RPS=0.3
+RATE_LIMIT_BURST=3
+
+# Token Budget
+# LLM_MAX_OUTPUT_TOKENS: Cap tokens generated per LLM call (default: 4096)
+#   - Lower to reduce cost and stay within rate limits (e.g., 2048)
+LLM_MAX_OUTPUT_TOKENS=4096
+#
+# LLM_MAX_INPUT_TOKENS: Cap total input tokens per LLM call (default: unset = no limit)
+#   - Trims old messages to stay under this limit, keeping the most recent context
+#   - Set to ~80% of your gateway's per-minute token limit (e.g., 20000 for a 30k limit)
+#   - Uses approximate counting (~4 chars per token)
+# LLM_MAX_INPUT_TOKENS=20000
+#
+# MAX_TOOL_OUTPUT_CHARS: Truncate any single tool response beyond this (default: 12000)
+#   - Prevents a single tool call from bloating the conversation history
+#   - Lower for tight budgets (e.g., 6000), higher for detailed analysis (e.g., 20000)
+MAX_TOOL_OUTPUT_CHARS=12000
+#
+# MAX_SCAN_FILES: How many files scan_structure returns (default: 200)
+#   - Lower for large repos or tight budgets (e.g., 50)
+MAX_SCAN_FILES=200
+
 # Scanner Settings
 # Maximum file size in bytes (default: 1MB)
 MAX_FILE_SIZE=1000000
