--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langchain-openai>=1.1.8",
     "langchain-community>=0.4.1",
     "langchain-litellm>=0.5.1",
+    "langfuse>=3.0.0",
     "tree-sitter>=0.24.0",
     "tree-sitter-python>=0.23.0",
     "tree-sitter-javascript>=0.23.0",
